# rules_distroless

./: .bazelignore  .bazelrc  .gitattributes  BUILD.bazel  MODULE.bazel  README.md  SECURITY.md  apt.lock.json  fix.md  rules_oci.patch
.aspect/workflows/: config.yaml
.bcr/: metadata.template.json  source.template.json
.github/workflows/: ci.yaml  publish.yaml  release.yaml  release_prep.sh  tag.yaml
apt/: BUILD.bazel  defs.bzl  extensions.bzl
apt/private/: BUILD.bazel  apt_cursed_symlink.bzl  apt_deb_repository.bzl  apt_dep_resolver.bzl  cc_deb_library.bzl  deb_cc_export.bzl  deb_export.bzl  deb_import.bzl  deb_postfix.bzl  deb_resolve.bzl  deb_translate_lock.bzl  dpkg_status.bzl  dpkg_status.sh  dpkg_statusd.bzl  dpkg_statusd.sh  lockfile.bzl  merge_directory.bzl  pkgconfig.bzl  so_library.bzl  sysroot.bzl  sysroot.sh  sysroot_repository.bzl  translate_dependency_set.bzl  util.bzl  version.bzl  version_constraint.bzl
apt/tests/: BUILD.bazel  deb_postfix_test.bzl  dpkg_status_test.bzl  dpkg_statusd_test.bzl  resolution_test.bzl  translate_dependency_set_test.bzl  version_test.bzl
apt/tests/resolution/: BUILD.bazel  dependencies.yaml
distroless/: BUILD.bazel  dependencies.bzl  toolchains.bzl
distroless/private/: BUILD.bazel  cacerts.bzl  cacerts.sh  flatten.bzl  flatten.sh  group.bzl  home.bzl  locale.bzl  locale.sh  os_release.bzl  passwd.bzl  tar.bzl
distroless/tests/: BUILD.bazel  asserts.bzl  flatten_test.bzl  locale_test.bzl
e2e/smoke/: BUILD  MODULE.bazel
examples/: .bazelrc  MODULE.bazel
examples/cc_lib/: BUILD.bazel  MODULE.bazel  test.c
examples/debian_snapshot/: BUILD.bazel
examples/flatten/: BUILD.bazel
examples/group/: BUILD.bazel
examples/os_release/: BUILD.bazel
examples/passwd/: BUILD.bazel
examples/sysroot/: BUILD.bazel  README.md
examples/ubuntu_snapshot/: BUILD.bazel
