"Examples module for rules_distroless"

module(
    name = "rules_distroless_examples",
    version = "0.0.0",
)

bazel_dep(name = "rules_distroless", version = "0.0.0")
local_path_override(
    module_name = "rules_distroless",
    path = "..",
)

bazel_dep(name = "aspect_bazel_lib", version = "2.14.0")
bazel_dep(name = "bazel_lib", version = "3.0.0-rc.0")
bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "rules_oci", version = "2.0.0")
bazel_dep(name = "rules_java", version = "8.8.0")
bazel_dep(name = "container_structure_test", version = "1.19.1")
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "tar.bzl", version = "0.6.0")

# Toolchains from aspect_bazel_lib
bazel_lib_toolchains = use_extension("@aspect_bazel_lib//lib:extensions.bzl", "toolchains")
use_repo(bazel_lib_toolchains, "bsd_tar_toolchains")
use_repo(bazel_lib_toolchains, "zstd_toolchains")

# Test fixture packages
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "example-bullseye-ca-certificates",
    build_file_content = 'exports_files(["data.tar.xz", "control.tar.xz"])',
    sha256 = "b2d488ad4d8d8adb3ba319fc9cb2cf9909fc42cb82ad239a26c570a2e749c389",
    urls = ["https://snapshot.debian.org/archive/debian/20231106T210201Z/pool/main/c/ca-certificates/ca-certificates_20210119_all.deb"],
)

http_archive(
    name = "example-bullseye-libc-bin",
    build_file_content = 'exports_files(["data.tar.xz"])',
    sha256 = "8b048ab5c7e9f5b7444655541230e689631fd9855c384e8c4a802586d9bbc65a",
    urls = ["https://snapshot.debian.org/archive/debian-security/20231106T230332Z/pool/updates/main/g/glibc/libc-bin_2.31-13+deb11u7_amd64.deb"],
)

http_archive(
    name = "example-bookworm-libc-bin",
    build_file_content = 'exports_files(["data.tar.xz"])',
    sha256 = "38c44247c5b3e864d6db2877edd9c9a0555fc4e23ae271b73d7f527802616df5",
    urls = ["https://snapshot.debian.org/archive/debian-security/20231106T230332Z/pool/updates/main/g/glibc/libc-bin_2.36-9+deb12u3_armhf.deb"],
)

# APT extension for Debian/Ubuntu packages
apt = use_extension("@rules_distroless//apt:extensions.bzl", "apt")

# Debian Bullseye sources (for debian_snapshot example)
# Using September 2024 snapshot
apt.sources_list(
    architectures = [
        "amd64",
        "arm64",
    ],
    components = [
        "main",
        "contrib",
    ],
    suites = [
        "bullseye",
        "bullseye-updates",
    ],
    types = ["deb"],
    uris = [
        "https://snapshot-cloudflare.debian.org/archive/debian/20240210T223313Z",
        "https://snapshot.debian.org/archive/debian/20240210T223313Z",
    ],
)
apt.sources_list(
    architectures = [
        "amd64",
        "arm64",
    ],
    components = [
        "main",
    ],
    suites = [
        "bullseye-updates",
    ],
    types = ["deb"],
    uris = ["https://snapshot-cloudflare.debian.org/archive/debian/20240210T223313Z/"],
)
apt.sources_list(
    architectures = [
        "amd64",
        "arm64",
    ],
    components = ["main"],
    suites = ["bullseye-security"],
    types = ["deb"],
    uris = ["https://snapshot-cloudflare.debian.org/archive/debian-security/20240210T223313Z"],
)
apt.sources_list(
    architectures = [
        "amd64",
        "arm64",
    ],
    components = ["main"],
    suites = ["cloud-sdk"],
    types = ["deb"],
    uris = ["https://packages.cloud.google.com/apt"],
)

# Ubuntu Noble sources (for ubuntu_snapshot example)
# NOTE: Commented out because snapshot URLs are returning 404
# apt.sources_list(
#     architectures = [
#         "amd64",
#         "arm64",
#     ],
#     components = ["main"],
#     suites = [
#         "noble",
#         "noble-security",
#         "noble-updates",
#     ],
#     types = ["deb"],
#     uris = ["https://snapshot.ubuntu.com/ubuntu/20240301T030400Z"],
# )

# Install packages for Debian Bullseye example
apt.install(
    dependency_set = "bullseye",
    packages = [
        "ncurses-base",
        "libncurses6",
        "tzdata",
        "coreutils",
        "dpkg",
        "apt",
        "perl",
        "ca-certificates",
        "nvidia-kernel-common",
        "bash",
        "nginx-full",
        "nginx-core",
        "google-cloud-cli"
    ],
    suites = [
        "bullseye",
        "bullseye-updates",
        "bullseye-security",
        "cloud-sdk",
    ],
)

# Install packages for Ubuntu Noble example
# NOTE: Commented out because snapshot URLs are returning 404
# apt.install(
#     dependency_set = "noble",
#     packages = [
#         "bash",
#         "coreutils",
#         "dpkg",
#         "libncurses6",
#         "ncurses-base",
#         "tzdata",
#     ],
#     suites = [
#         "noble",
#         "noble-security",
#         "noble-updates",
#     ],
# )

################################################################
# Example for LLVM Toolchain with hermetic sysroot and libstdc++
################################################################

# Define the sources for the packages that make up the sysroot
apt.sources_list(
    # You may select multiple architectures for different sysroots
    architectures = [
        "amd64",
        "arm64",
    ],
    components = ["main"],
    suites = [
        "noble",
        "noble-security",
        "noble-updates",
    ],
    types = ["deb"],
    uris = ["https://snapshot.ubuntu.com/ubuntu/20260401T000000Z"],
)

# Specify what packages should be installed in your sysroot
apt.install(
    dependency_set = "ubuntu24_04_sysroot",
    packages = [
        "libc6", # Core C/POSIX
        "libc6-dev",  # Core C/POSIX
        "linux-libc-dev",  # Core C/POSIX
        "libstdc++6", # C++ standard library runtime
        "libstdc++-13-dev", # C++ standard library headers
        "libgcc-s1", # Exception unwinding
        "libatomic1", # Non-lock-free atomics support
    ],
    suites = [
        "noble",
        "noble-security",
        "noble-updates",
    ],
    # toolchains_llvm expects a mergedusr layout in the sysroot for the linker to find the libraries
    mergedusr = True,
)

apt.sysroot(
    name = "ubuntu24_04_sysroot_amd64",
    dependency_set = "ubuntu24_04_sysroot",
    architecture = "amd64",
)
apt.sysroot(
    name = "ubuntu24_04_sysroot_arm64",
    dependency_set = "ubuntu24_04_sysroot",
    architecture = "arm64",
)
use_repo(apt, "bullseye", "ubuntu24_04_sysroot_amd64", "ubuntu24_04_sysroot_arm64")

bazel_dep(name = "rules_cc", version = "0.1.5")
bazel_dep(name = "toolchains_llvm", version = "1.7.0", dev_dependency = True)

llvm = use_extension(
    "@toolchains_llvm//toolchain/extensions:llvm.bzl",
    "llvm",
    dev_dependency = True,
)
llvm.toolchain(
    llvm_version = "19.1.7",
    # You can now specify the C++ stdlib that is contained in the sysroot above
    stdlib = {"": "stdc++"},
)

# Specify the sysroot for the matching target
llvm.sysroot(
    name = "llvm_toolchain",
    label = "@ubuntu24_04_sysroot_amd64//sysroot",
    targets = ["linux-x86_64"],
)
llvm.sysroot(
    name = "llvm_toolchain",
    label = "@ubuntu24_04_sysroot_arm64//sysroot",
    targets = ["linux-aarch64"],
)
use_repo(llvm, "llvm_toolchain")
register_toolchains("@llvm_toolchain//:cc-toolchain-x86_64-linux", dev_dependency=True)
