load(":deb_postfix_test.bzl", "deb_postfix_tests")
load(":dpkg_status_test.bzl", "dpkg_status_tests")
load(":dpkg_statusd_test.bzl", "dpkg_statusd_tests")
load(":resolution_test.bzl", "resolution_tests")
load(":translate_dependency_set_test.bzl", "translate_dependency_set_tests")
load(":version_test.bzl", "version_tests")

version_tests()

deb_postfix_tests()

dpkg_status_tests()

dpkg_statusd_tests()

resolution_tests()

translate_dependency_set_tests()
