load("@bazel_lib//:bzl_library.bzl", "bzl_library")
load("@rules_java//java:defs.bzl", "java_binary")

exports_files([
    "cacerts.sh",
    "locale.sh",
    "flatten.sh",
])

java_binary(
    name = "keystore_binary",
    srcs = ["JavaKeyStore.java"],
    javacopts = [
        "-Xlint:-options",
    ],
    main_class = "JavaKeyStore",
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "cacerts",
    srcs = ["cacerts.bzl"],
    visibility = ["//distroless:__subpackages__"],
    deps = [":tar"],
)

bzl_library(
    name = "locale",
    srcs = ["locale.bzl"],
    visibility = ["//distroless:__subpackages__"],
    deps = [":tar"],
)

bzl_library(
    name = "group",
    srcs = ["group.bzl"],
    visibility = ["//distroless:__subpackages__"],
    deps = [
        "@bazel_lib//lib:expand_template",
        "@bazel_lib//lib:utils",
        "@bazel_skylib//rules:write_file",
        "@tar.bzl//tar:tar",
    ],
)

bzl_library(
    name = "os_release",
    srcs = ["os_release.bzl"],
    visibility = ["//distroless:__subpackages__"],
    deps = [
        "@bazel_lib//lib:expand_template",
        "@tar.bzl//tar:tar",
        "@bazel_lib//lib:utils",
        "@bazel_skylib//rules:write_file",
    ],
)

bzl_library(
    name = "passwd",
    srcs = ["passwd.bzl"],
    visibility = ["//distroless:__subpackages__"],
    deps = [
        ":util",
        "@bazel_lib//lib:expand_template",
        "@tar.bzl//tar:tar",
        "@bazel_lib//lib:utils",
        "@bazel_skylib//rules:write_file",
    ],
)

bzl_library(
    name = "java_keystore",
    srcs = ["java_keystore.bzl"],
    visibility = ["//distroless:__subpackages__"],
    deps = [":tar"],
)

bzl_library(
    name = "home",
    srcs = ["home.bzl"],
    visibility = ["//distroless:__subpackages__"],
    deps = [
        ":tar",
        ":util",
        "@tar.bzl//tar:tar",
    ],
)

bzl_library(
    name = "flatten",
    srcs = ["flatten.bzl"],
    visibility = ["//distroless:__subpackages__"],
    deps = [":tar"],
)

bzl_library(
    name = "tar",
    srcs = ["tar.bzl"],
    visibility = [
        "//apt:__subpackages__",
        "//distroless:__subpackages__",
    ],
    deps = [
        "@tar.bzl//tar:tar",
        "@bazel_skylib//lib:sets",
    ],
)

bzl_library(
    name = "util",
    srcs = ["util.bzl"],
    visibility = ["//distroless:__subpackages__"],
)
