load("@bazel_lib//:bzl_library.bzl", "bzl_library")
load(":flatten_test.bzl", "flatten_tests")
load(":locale_test.bzl", "locale_tests")

bzl_library(
    name = "asserts",
    srcs = ["asserts.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_lib//lib:diff_test",
        "@bazel_skylib//rules:write_file",
    ],
)

flatten_tests()

locale_tests()
